--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 .App {
-  position: absolute;
   top: 0;
   left: 0;
+  right: 0;
   width: 100%;
   height: 100%;
   background-color: #27262b;
@@ -9,4 +9,8 @@
     var(--center-abs-margin) + var(--center-width) + var(--rhs-margin) +
       var(--rhs-width) */
   /* ); */
+}
+.displayTapBox {
+  margin-left: 200px;
+  margin-right: 200px;
 }
