--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,11 @@
 .App {
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: #27262b;
+}
+.displayTapBox {
+  margin-left: 200px;
+  margin-right: 200px;
 }
