--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,3 +9,13 @@
   margin-left: 200px;
   margin-right: 200px;
 }
+
+.pagenation {
+  display: inline-block;
+  text-align: center;
+  margin-left: 10px;
+  border-style: solid;
+  border-color: white;
+  border-width: 1px;
+  padding-left: 13px;
+}
