--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,12 @@
+@import url(//font.elice.io/EliceDigitalBaeum.css);
+
 .App {
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: #27262b;
+  font-family: 'Elice Digital Baeum', sans-serif;
 }
 .displayTapBox {
   margin-left: 200px;
